切版 header, footer, banner-section

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,6 @@
 .footer{
-  background: #69F0AE;
-  font-size: 64px;
+  background: $black_100;
+  color: $white_100;
+  text-align: center;
+  padding: 40px 0;
 }
