--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,8 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<header class="header">
+  <ul class="container">
+    <li><a href="#">WILLIAM LEE</a></li>
+    <li><a href="#">BASED IN TAIWAN</a></li>
+    <li><a href="#">CURRENTLY FRONT END<br> ENGINEER AT HEXSCHOOL</a></li>
+    <li><a href="#contact-section">CONTACT ME</a></li>
+  </ul>
+</header>
