--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,4 +1,5 @@
 @import './reset.scss';
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
 @import './variables.scss';
 @import './layout/header.scss';
 @import './layout/footer.scss';
