--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,47 @@
+body {
+  font-family: 'Bruno Ace SC', cursive;
+}
+
 .container {
   width: 1296px;
+  margin: 0 auto;
+}
+
+.mr-24 {
+  margin-right: 24px;
+}
+
+.banner-section {
+  background: $black_100;
+  padding: 72px 0;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .banner-img {
+    max-width: 636px;
+    height: 848px;
+  }
+  h1 {
+    font-size: 128px;
+    color: $green_100;
+  }
+  h2 {
+    font-size: 64px;
+    color: $white_100;
+  }
+  .title-group {
+    text-align: right;
+  }
+  .contact-link {
+    display: inline-flex;
+    color: $black_100;
+    background: $white_100;
+    border-radius: 32px;
+    padding: 12px 24px;
+    .contact-link-text {
+      margin-right: 4px;
+    }
+  }
 }
