--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -3,6 +3,6 @@
     <li><a href="#">WILLIAM LEE</a></li>
     <li><a href="#">BASED IN TAIWAN</a></li>
     <li><a href="#">CURRENTLY FRONT END<br> ENGINEER AT HEXSCHOOL</a></li>
-    <li><a href="#contact-section">CONTACT ME</a></li>
+    <li><a href="#contact">CONTACT ME</a></li>
   </ul>
 </header>
